<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="260dp"
    android:layout_height="340dp"
    android:background="@drawable/popupborder">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="Credits"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backBtnCredits"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="goBackBtn"
        android:text="okay" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="214dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text="@string/credits" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/credits2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView27"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/credits3" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/credits4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView29"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/credits5" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/tum" />

</RelativeLayout>