<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="285dp"
    android:background="@drawable/popupborder">

    <TextView
        android:id="@+id/cameraDialogTextView"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/input_dialog_textview"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/cameraInputImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/cameraDialogTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TableLayout
        android:id="@+id/cameraTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraInputImageView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="@+id/cameraInputImageView"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cameraTableLayout"
            android:layout_alignStart="@+id/cameraTableLayout">

            <Button
                android:id="@+id/cameraAcceptBtn"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/input_dialog_accept"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cameraDeclineBtn"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/input_dialog_decline"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>
</RelativeLayout>