<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/easyLevel3Btn"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="screen"
        android:enabled="false"
        android:fontFamily="casual"
        android:onClick="toLevelThree"
        android:text="@string/easy_level_3"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/easyLevel4Btn"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="screen"
        android:enabled="false"
        android:fontFamily="casual"
        android:onClick="toLevelFour"
        android:text="@string/easy_level_4"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/easyLevel2Btn"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="screen"
        android:enabled="false"
        android:fontFamily="casual"
        android:onClick="toLevelTwo"
        android:text="@string/easy_level_2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/easyLevel1Btn"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:backgroundTintMode="screen"
        android:fontFamily="casual"
        android:onClick="toLevelOne"
        android:text="@string/easy_level_1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintGuide_begin="123dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintGuide_begin="123dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintGuide_begin="123dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintGuide_begin="123dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"
        app:layout_constraintGuide_begin="123dp" />


</android.support.constraint.ConstraintLayout>